src/components/Forecast/Forecast.css
.forecast-container {
    text-align: center;
    padding-bottom: 5px;
}
.forecast-container__fc-title {
    display: inline-block;
    margin: 15px 0;
    font-size: 3rem;
    font-weight: bold;
    color: white;
}
.forecast-container__fc-item-container {
    position: relative;
    display: flex;
    justify-content: space-between;
    align-items: center;
    width: 85%;
    margin: 10px auto 0;
    padding: 2px 10px;
    background-color: #066486;
    border-radius: 10px;
    color: white;
    cursor: pointer;
    z-index: 1;
    -webkit-tap-highlight-color: transparent;
    -webkit-box-shadow: 0px 0px 3px 2px #3a7a9b;
    box-shadow: 0px 0px 3px 2px #3a7a9b;

    transition: all 0.5s cubic-bezier(0.075, 0.82, 0.165, 1);
}
.forecast-container__fc-item-container:active {
    transform: scale(1.05);
}
.forecast-container__fc-item-container div:first-child {
    display: flex;
    align-items: center;
}
.forecast-container__fc-item-container div:last-child {
    display: flex;
    align-items: center;
    justify-self: flex-end;
}
.forecast-image {
    width: 50px;
}
.forecast-day {
    display: inline-block;
    margin-left: 10px;
    font-weight: bold;
    cursor: pointer;
}
.forecast-description {
    margin-right: 15px;
    text-transform: capitalize;
    cursor: pointer;
}
.forecast-temp-min-max {
    color: #dfdfdf;
    font-weight: bold;
    cursor: pointer;
}
.forecast-panel-info {
    display: grid;
    grid-template-columns: auto auto;
    column-gap: 25px;
    width: 80%;
    background-color: #055472;
    padding: 5px 20px;
    margin: 0 auto;
    border-bottom-left-radius: 10px;
    border-bottom-right-radius: 10px;
    z-index: 0;
    -webkit-box-shadow: 0px 1px 7px 2px #1e3135;
    box-shadow: 0px 1px 7px 2px #1e3135;

    transform: translateY(-55px);
    opacity: 0;
    animation-name: info;
    animation-duration: 0.25s;
    animation-iteration-count: 1;
    animation-timing-function: ease-out;
    animation-fill-mode: forwards;
}
@keyframes info {
    100% {
        transform: translateY(0);
        opacity: 1;
    }
}
.forecast-panel-info-item {
    display: flex;
    justify-content: space-between;
    align-items: center;
}
.forecast-panel-info-item label:first-child {
    color: #dfdfdf;
}
.forecast-panel-info-item label:last-child {
    color: #dfdfdf;
    font-weight: bold;
}

@media (max-width: 500px) {
    .forecast-container__fc-title {
        font-size: 2rem;
        margin: 15px 0 5px;
    }
    .forecast-day {
        margin-left: 5px;
    }
    .forecast-container__fc-item-container {
        display: grid;
        grid-template-columns: 1fr 1fr;
        justify-items: flex-start;
        padding: 2px 5px;
    }
    .forecast-panel-info {
        display: grid;
        grid-template-columns: auto auto;
        column-gap: 8px;
        width: 80%;
        background-color: #055472;
        padding: 5px 10px;
        margin: 0 auto;
        border-bottom-left-radius: 10px;
        border-bottom-right-radius: 10px;
    }
    .forecast-description {
        width: 70px;
    }
    .forecast-panel-info-item label:first-child {
        font-size: 1.4rem;
        color: #dfdfdf;
    }
    .forecast-panel-info-item label:last-child {
        font-size: 1.4rem;
        color: #dfdfdf;
        font-weight: bold;
    }
}

@media (min-width: 850px) {
    .forecast-container {
        grid-area: week_info;
        padding: 0;
        align-self: center;
    }
    .forecast-container__fc-item-container {
        width: 90%;
    }
    .forecast-panel-info {
        column-gap: 15px;
        width: 85%;
        padding: 5px 15px;
    }
}

